# Analyzer

./: .gitignore  Makefile  README.md  config.mk  cross-linux-gcc.cmake
analyzer/: .gitignore  Makefile.am  Makefile.in  config.h.in  configure  configure.ac
analyzer/autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
analyzer/include/: input_arguments.h  notification_loop.h  pcap_setup.h
analyzer/src/: input_arguments.c  main.c  notification_loop.c  pcap_setup.c
include/: input_arguments.h  notification_loop.h  packet_parser.h  pcap_setup.h
libs/: Makefile
libs/libjson-c/: Makefile  configure.ac.patch
libs/libpcap/: Makefile
libs/libubox/: CMake.patch  Makefile
libs/ubus/: Makefile
src/: input_arguments.c  main.c  notification_loop.c  packet_parser.c  pcap_setup.c
